css/adonis.css
/*!
 * Sneaky Themes - Adonis Bootstrap Template (http://sneakythemes.com)
 */
 /* General */
 html, body {
 	height: 100%;
 }
 body {
 	font-family: 'Roboto', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	overflow-x: hidden;
 	background-color: #f5f5f5;
 	color: #2a3237;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 section {
 	padding: 50px 0;
 }
 img {
 	max-width: 100%;
 }
 h1, h2, h3, h4 {
 	color: rgb(90,90,90);
 	font-family: "Montserrat";
 }
 .container {
 	max-width: 90%;
 }
 .white {
 	color: white;
 }
 .softGray {
 	color: rgb(90,90,90);
 }
 .hardGray {
 	color: rgb(60,60,60);
 }
 .lead {
 	font-weight: 400;
 }
 a {
 	color: #1E88E5;
 	text-decoration: none !important;
 }
 a:focus {
 	outline: none;
 }
 .no-gutter > [class*='col-'] {
 	padding-right:0;
 	padding-left:0;
 }
 .btn, .btn.focus, .btn:focus {
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 	-webkit-transition: all 0.2s;
 	-o-transition: all 0.2s;
 	transition: all 0.2s;
 	background: #1E88E5;
 	color: white;
 	border: none;
 	outline: none;
 	font-size: 16px;
 	padding: 10px 20px;
 	min-width: 150px;
 }
 .btn:hover {
 	-webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, 0.23), 0 10px 30px rgba(0, 0, 0, 0.19);
 	box-shadow: 0 6px 10px rgba(0, 0, 0, 0.23), 0 10px 30px rgba(0, 0, 0, 0.19);
 	-webkit-transition: all 0.2s;
 	-o-transition: all 0.2s;
 	transition: all 0.2s;
 	background: #1565C0;
 	color: white;
 }
 .btn-white, .btn-white:hover, .btn-white:focus, .btn-white.focus {
 	background: white;
 	color: #1E88E5;
 }
 .form-horizontal .form-group {
 	margin-left: 0;
 	margin-right: 0;
 }
 /* Navigation */
 #mainNav {
 	box-shadow:	0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 	background-color: white;
 }
 .navbar-nav>li>a {
 	padding: 25px 30px;
 }
 .navbar-logo {
 	padding: 10px 0 10px 30px;
 	height: 70px;
 }
 .navbar-toggle {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
 .navbar-toggle, .navbar-collapse, #mainNav {
 	border: none !important;
 }
 .navbar-default .navbar-nav>.active>a:focus {
 	background: transparent;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
 	color: white;
 	background: #1E88E5;	
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>li>a:hover {
 	color: white;
 	background: #1E88E5;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
 /* Header */
 header .header-background, header .header-overlay {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 }
 header .header-background {
 	background-size: cover;
 	background-position: center;
 	z-index: 0;
 }
 header .header-overlay {
 	background: rgba(33,33,33,0.6);
 	z-index: 1;
 }
 header {
 	position: relative;
 	width: 100%;
 	height: 100%;
 	color: white;
 }
 header .container {
 	position: relative;
 	height: 100%;
 	z-index: 2;
 }
 header .table {
 	display: table;
 	height: 100%;
 }
 header .header-text {
 	display: table-cell;
 	text-align: center;
 	vertical-align: middle;
 	color: white;
 	position: relative;
 }
 header .header-text.header-text-min {
 	top: 5%;
 }
 header .btn {
 	margin: 30px;
 }
 
 /* About Us */
 #about {
 	background: #1E88E5;
 	color: white;
 }
 #about .container {
 	max-width: 80%;
 }
 #about .section-heading {
 	margin-bottom: 20px;
 }
 /* Our Work */
 #our-work .section-heading {
 	margin-bottom: 40px;
 }
 .portfolio-modal .modal-content {
 	-webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 	width: 100%;
 	position: relative;
 	margin: 10% auto 0;
 	padding: 0 15px;
 	border: none;
 	border-radius: 3px;

 	max-height:100%;
    overflow-y: auto;
 }
 .portfolio-box {
 	display: block;
 	position: relative;
 	background-color: white;
 	height: 340px;
 	margin: 15px 0;
 	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 	text-decoration: none !important;
 	background-position: center;
 	background-size: cover;
 }

 .portfolio-box.portfolio-1 {
 	background-image: url('../img/portfolio/shuffly.png');
 }
 .portfolio-box.portfolio-2 {
 	background-image: url('../img/portfolio/onecalculator.png');	
 }
 .portfolio-box.portfolio-3 {
 	background-image: url('../img/portfolio/securconfortwebsite.png');	
 }
 .portfolio-box.portfolio-4 {
 	background-image: url('../img/portfolio/heightmapgenerator.png');	
 }
 .portfolio-box.portfolio-5 {
 	background-image: url('../img/portfolio/terraingenerator.png');	
 }
 .portfolio-box.portfolio-6 {
 	background-image: url('../img/portfolio/blender.jpg');	
 }

 .portfolio-box-caption {
 	color: white;
 	background: rgba(0,0,0,0.4);
 	padding: 15px;
 	width: 100%;
 	position: absolute;
 	bottom: 0;
 }
 .modal-head {
 	background-size: cover;
 	background-position: center;
 	height: 300px;
 }
 .modal-head .btn-close-modal {
 	border-radius: 0;
 	position: relative;
 	left: 0px;
 	top: 0px;
 	padding: 0px;
 	height: 50px;
 	width: 50px;
 	min-width: 50px;
 	background: rgba(0,0,0,0.5);
 }
 .modal-head .btn-close-modal i {
 	font-size: 18px;
 	width: 18px;
 	height: 18px;
 	position: relative;
 	right: 1px;
 	top: 1px;
 }

 .portfolioModal1 .modal-head {
 	background-image: url("../img/portfolio/shuffly.png");
 }
 .portfolioModal2 .modal-head {
 	background-image: url("../img/portfolio/onecalculator.png");
 }
 .portfolioModal3 .modal-head {
 	background-image: url("../img/portfolio/securconfortwebsite.png");
 }
 .portfolioModal4 .modal-head {
 	background-image: url("../img/portfolio/heightmapgenerator.png");
 }
 .portfolioModal5 .modal-head {
 	background-image: url("../img/portfolio/terraingenerator.png");
 }
 .portfolioModal6 .modal-head {
 	background-image: url("../img/portfolio/blender.jpg");
 }
 
 /* Social */
 .social {
 	background: transparent;
 	color: white;
 	text-align: center;
 	margin-top: 40px;
 }
 .social h3 {
 	display: inline-block;
 	margin: 0 15px 0 0;
 	line-height: 44px;
 }
 .social .follow-us a {
 	display: inline-block;
 	background: rgba(255,255,255,1);
 	color: #1E88E5;
 	height: 44px;
 	width: 44px;
 	line-height: 44px;
 	font-size: 24px;
 	border-radius: 50%;
 	margin: 0 5px;
 	box-shadow: 0;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
 .social .follow-us a:hover {
 	background: rgba(245,245,245,1);
 	box-shadow: 0 6px 10px rgba(0, 0, 0, 0.23), 0 10px 30px rgba(0, 0, 0, 0.19);
 }
 /* Contact */
 #contact {
 	padding: 50px 0 0;
 	background: #1E88E5;
 }
 #contact p i {
 	margin-right: 15px;
 	font-size: 20px;
 	text-align: center;
 	color: #1E88E5;
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
 	background: #f5f5f5;
 	line-height: 50px;
 }
 #contact p:after {
 	top: -7px;
 	left: -7px;
 	padding: 7px;
 	box-shadow: 0 0 0 2px #8386b5;
 	-webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
 	-webkit-transform: scale(.8);
 	-moz-transition: -moz-transform 0.2s, opacity 0.2s;
 	-moz-transform: scale(.8);
 	-ms-transform: scale(.8);
 	transition: transform 0.2s, opacity 0.2s;
 	transform: scale(.8);
 	opacity: 0;
 }
 #contact p:hover:after {
 	-webkit-transform: scale(1);
 	-moz-transform: scale(1);
 	-ms-transform: scale(1);
 	transform: scale(1);
 	opacity: 1;
 }
 #contact .contact-right {
 	padding-top: 60px;
 }
 #contact .contact-right p {
 	font-size: 1.3em;
 }
 #contact .copyright {
 	margin-top: 20px;
 }
 .form-control-wrapper {
 	font-family: 'roboto', sans-serif;
 	width: 100%;
 	padding: 20px 40px;
 	max-width: 460px;
 	margin: 0 auto;
 	border-radius: 3px;
 	color: #555;
 }
 .form-control-wrapper h2 {
 	margin-top: 10px;
 }
 .form-control-wrapper .contact-title {
 	margin: 0;
 	padding: 20px 0;
 }
 .form-control-wrapper .submit-button {
 	background: white;
 	color: #1E88E5;
 	display: block;
 	width: 150px;
 	margin: 20px 0 10px;
 }
 textarea {
 	height: 69px;
 }
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
 	color: white;
 	font: inherit;
 	-webkit-transition: -webkit-transform 0.3s ease-in-out, font-size 0.3s ease-in-out, visibility 0.3s ease-in-out;
 	transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 	color: white;
 }
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
 	color: white;
 	opacity: 1;
 }
 ::-moz-placeholder { /* Mozilla Firefox 19+ */
 	color: white;
 	opacity: 1;
 }
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
 	color: white;
 }
 input, textarea {
 	font: inherit;
 	font-size: 1.2em;
 	margin: 0px auto;
 	width: 100%;
 	max-width: 400px;
 	display: block;
 	border: none;
 	padding: 20px 0 10px;
 	border-bottom: solid 2px #ffffff;
 	background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #ffffff 4%);
 	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #ffffff 4%);
 	background-position: -400px 0;
 	background-size: 400px 100%;
 	background-repeat: no-repeat;
 	-webkit-transition: background 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
 	transition: background 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
 	resize: none;
 	overflow: hidden;
 }
 input:focus::-webkit-input-placeholder,
 textarea:focus::-webkit-input-placeholder {
 	color: #ffffff;
 }
 input:focus, input:valid,
 textarea:focus,
 textarea:valid {
 	color: #ffffff;
 	box-shadow: none;
 	outline: none;
 	background-position: 0 0;
 }
 input:focus::-webkit-input-placeholder, input:valid::-webkit-input-placeholder,
 textarea:focus::-webkit-input-placeholder,
 textarea:valid::-webkit-input-placeholder {
 	color: #ffffff;
 	font-size: 0.8em;
 	-webkit-transform: translateY(-20px);
 	transform: translateY(-20px);
 	visibility: visible !important;
 	opacity: 1;
 }
 /* Media */
 @media (max-width: 1199px) {
 	.portfolio-box {
 		height: 345px;
 	}
 }
 @media (max-width: 992px) {
 	.form-control-wrapper .submit-button {
 		margin: 20px auto;
 	}
 	.contact-right p, .contact-title {
 		text-align: center;
 	}
 	h2, .h2 {
 		font-size: 24px;
 	}
 	section {
 		padding: 30px 0;
 	}
 }
 @media (max-width: 767px) {
 	.portfolio-modal .modal-content {
 		height: 100%;
 		margin: 0;
 	}
 	.intro-card .intro-card-actions {
 		position: relative;
 	}
 	.social h3 {
 		display: block;
 	}
 	.portfolio-box {
 		height: 280px;
 	}
 	.container-fluid {
 		padding: 0;
 	}
 	.navbar-header {
 		padding: 0 15px;
 	}
 	.navbar-nav {
 		margin: 0;
 		text-align: center;
 	}
  	#contact .contact-right {
 		padding-top: 30px;
 	}
 }
 @media (max-width: 650px) {
 	.portfolio-box {
 		height: 180px;
 	}
 }
 @media (max-width: 450px) {
 	.portfolio-box {
 		height: 150px;
 	}
 }
 @media (min-width: 768px) {
 	header .header-text h1 {
 		font-size: 60px;
 	}
 	.intro-card .container {
 		width: 100%;
 	}
 	.modal-content {
 		max-width: 750px;
 	}
 }

